 * Features 
   - Constant times can be injected inside MPI_Wtime and MPI_Test through options smpi/wtime and smpi/test
   - InfiniBand network model added : Based on the works of Jerome Vienne (http://mescal.imag.fr/membres/jean-marc.vincent/index.html/PhD/Vienne.pdf )
   - When smpi/display_timing is set, also display global simulation time and application times
 * Collective communications
   - SMP-aware algorithms are now dynamically handled. An internal communicator is created for each node, and an external one to handle communications between "leaders" of each node
   - MVAPICH2 (1.9) collective algorithms selector : normal and SMP algorithms are handled, and selection logic is based on the one used on TACC's Stampede cluster (https://www.tacc.utexas.edu/stampede/).
   - Support for Rabenseifner Reduce/Allreduce algorithms (https://fs.hlrs.de/projects/par/mpi//myreduce.html)
 * Replay 
   - Replay now uses algorithms from wanted collective selector
   - Replay can be used with SMP-aware algorithms
   - Memory occupation of replay should now be contained (temporary buffers allocated in collective algorithms should be shared between processes)
   - Replay can now replay several traces at the same time (check examples/smpi/replay_multiple example), to simulate interactions between several applications on a given platform. User can specify the start time of each instance. This should also allow replay + actual applications to run.
  * Bug fixes 
   - [#17799] : have mpi_group_range_incl and mpi_group_range_excl better test some corner cases
   - Correctly use loopback on fat-tree clusters
   - Asynchronous small messages shouldn't trigger deadlocks anymore
 SURF
  * Bug fixes 
   - "Full" network optimization flag was broken since Surf++
   - Better handling of precision flags in maxmin
   - Fix bug causing sometimes "Impossible" errors
   - Properly pass cluster properties to included hosts
  * Improvement of the Energy plugin.